@@ -39,10 +39,6 @@ confpokerdir = ${pkgdatadir}/conf
 dist_confpoker_DATA = \
 	$(wildcard ${top_srcdir}/conf/*.xml)
 
-confpokerdir = ${pkgdatadir}/conf
-dist_confpoker_DATA = \
-	$(wildcard ${top_srcdir}/conf/*.xml)
-
 upgradepokerdir = ${pkgdatadir}/upgrades
 dist_upgradepoker_DATA = \
 	$(wildcard ${top_srcdir}/upgrades/*.xsl)
